p2/confs/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app1
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app1
    spec:
      containers:
      - image: otoufah/iot:v2
        command: ["npm", "start"]
        name: app1
        ports:
          - containerPort: 8080        
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app2
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app2
    spec:
      containers:
      - image: otoufah/iot:v2
        command: ["npm", "start"]
        name: app2
        ports:
          - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app3
  name: app3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app3
    spec:
      containers:
      - image: otoufah/iot:v2
        command: ["npm", "start"]
        name: app3
        ports:
          - containerPort: 8080
