p2/confs/services.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app1
  name: app1
spec:
  type: NodePort
  ports:
  - port: 9898
    protocol: TCP
    targetPort: 8080
  selector:
    app: app1
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app2
  name: app2
spec:
  type: NodePort
  ports:
  - port: 9898
    protocol: TCP
    targetPort: 8080
  selector:
    app: app2
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app3
  name: app3
spec:
  type: NodePort
  ports:
  - port: 9898
    protocol: TCP
    targetPort: 8080
  selector:
    app: app3
status:
  loadBalancer: {}
